--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
     --clr-white: hsl(0, 0%, 100%);
     --clr-black: hsl(0, 0%, 0%);
     --clr-grey: hsl(276, 25%, 8%);
-    --clr-deep-purple: #0b0410;
-    --clr-accent: #9125e4;
+    --clr-deep-purple: hsl(275, 60%, 4%);
+    --clr-accent: hsl(274, 78%, 52%);
 
     --ff-primary: "Poppins", sans-serif;
 
@@ -79,26 +79,7 @@ h3 { font-size: var(--fs-500);}
     }
 }
 
-@media (width > 840px) {
-
-    .panel-grid {
-        grid-template-columns: 1fr 1fr;
-        padding-top: 2rem;
-
-        img {
-            grid-column: 1 / 2;
-            grid-row: 1;
-        }
-    
-        div {
-            grid-column: 2 / 3;
-        }
-    }
-}
-
-
 /* Rules for this tutorial */
-
 ul[role="tablist"]{
     list-style: none;
     padding: 0;
@@ -127,7 +108,23 @@ a[role="tab"] {
     border: solid 2px var(--clr-accent);
 }
 
+
 @media (width > 840px) {
+    .panel-grid {
+        grid-template-columns: 1fr 1fr;
+        padding-top: 2rem;
+
+        img {
+            grid-column: 1 / 2;
+            grid-row: 1;
+        }
+    
+        div {
+            grid-column: 2 / 3;
+        }
+    }
+
+    /* Rules for this tutorial */
     ul[role="tablist"] {
         display: flex;
         background-color: var(--clr-deep-purple);
@@ -136,6 +133,9 @@ a[role="tab"] {
     li[role="presentation"] {
         border: none;
     }
+
 }
+
+
 
 
